openshift/route-redis-commander.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
  labels:
    paas.redhat.com/appcode: JTNR-001
  name: redis-commander
spec:
  port:
    targetPort: 8081-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: redis-commander
    weight: 100
